[package]
name = "probe"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = { version = "0.37", features = ["linux-netdevs"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
